# sqlx-bootstrap

./: Cargo.toml  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: lib.rs
