[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.13", default-features = false }
sqlx-bootstrap = { path = "../.." }
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
